--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hono-query/tsup",
+  "name": "@hono-query/react",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -12,6 +12,7 @@
     "build:tsc": "tsc --emitDeclarationOnly"
   },
   "devDependencies": {
+    "@hono-query/tsup": "workspace:*",
     "@hono-query/typescript-config": "workspace:*",
     "@types/node": "^22.5.2",
     "npm-run-all": "^4.1.5",
